fixed overflow problem

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -62,7 +62,6 @@ html {
 
 body {
     font-family: 'Ubuntu', sans-serif;
-    overflow: hidden;
 }
 
 body::before {
